--- a/package.json
+++ b/package.json
@@ -31,7 +31,15 @@
     "webpack-dev-server": "^3.1.9"
   },
   "dependencies": {
+    "@types/node-fetch": "^2.1.2",
+    "@types/usb": "^1.1.6",
+    "brother-ql": "github:petschekr/brother-ql",
+    "fs": "0.0.1-security",
+    "ndef": "^0.2.0",
+    "nfc-pcsc": "^0.6.2",
+    "node-fetch": "^2.2.0",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "usb": "^1.3.3"
   }
 }
